<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/rlClose">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Close"
            android:textSize="12sp"
            android:textColor="@color/white_transparent_20"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_below="@+id/rlClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/navHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="15sp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moments_nav"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_memory_book"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textSize="15sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"/>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="15sp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </RelativeLayout>
</RelativeLayout>