<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomePageFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="65"
            android:background="@color/blue"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:background="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hey_jatin"
            android:textSize="25sp"/>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llMoments">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recent_moments"
                android:textSize="15sp"
                android:textColor="@color/white_transparent_20"/>
            <RelativeLayout
                android:gravity="end"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    android:textColor="@color/white_transparent_20"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/text"
                    android:src="@drawable/ic_forward" />
            </RelativeLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rvMoments"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frequent_contacts"
                android:textSize="15sp"
                android:textColor="@color/grey"/>
            <RelativeLayout
                android:gravity="end"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_all"
                    android:textSize="15sp"
                    android:id="@+id/textContact"
                    android:textColor="@color/grey"/>
                <ImageView
                    android:layout_marginStart="5dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_toEndOf="@+id/textContact"
                    android:src="@drawable/ic_forward"
                    android:tint="@color/grey"
                    tools:ignore="UseAppTint" />
            </RelativeLayout>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rvContacts"/>
        <ImageView
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_camera_yellow" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_tobu_moments"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>
</RelativeLayout>