<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="20dp"
    app:cardPreventCornerOverlap="true"
    android:orientation="vertical">

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:id="@+id/rlMoments">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/screen_new"
            android:id="@+id/image">
        </ImageView>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">
            <ImageView
                android:id="@+id/ivSend"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_send" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_transparent_20"
                android:textSize="15sp"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"
                android:text="@string/share_moment"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:layout_margin="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:id="@+id/rlContacts">
        <ImageView
            android:id="@+id/ivContact"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_send_filled"
            android:layout_alignParentStart="true">
        </ImageView>
        <LinearLayout
            android:layout_marginStart="5dp"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@+id/ivContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                android:text="@string/mike_wazowski"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:textSize="10sp"
                android:text="@string/_2_moments"/>
        </LinearLayout>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_send_filled"
            android:layout_alignParentEnd="true">
        </ImageView>
    </RelativeLayout>
</androidx.cardview.widget.CardView>